<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CadastrarProdutos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCadastrar">

    <TextView
        android:id="@+id/textItem"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/chewy"
        android:text="@string/textView"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageUpload"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imageUpload"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/editTextItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textItem"
        app:srcCompat="@drawable/ic_baseline_photo_camera" />

    <EditText
        android:id="@+id/editTextItem"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/editText"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextQtd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextQtd"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/editTextQtd"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/editTextValor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextValor"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/editTextValor"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/buttonInserir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonInserir"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="@font/chewy"
        android:text="@string/buttonInserir"
        android:textSize="20sp"
        app:cornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck,VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>