<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ListaProdutos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaProdutos">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Produtos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewSize">

        <TextView
            android:id="@+id/textView"
            android:layout_width="305dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/chewy"
            android:text="@string/textViewTitle"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/buttonAdicionar"
            android:layout_width="390dp"
            android:layout_height="65dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/chewy"
            android:text="@string/buttonAdd"
            android:textSize="20sp"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/textViewTotal"
            android:layout_width="390dp"
            android:layout_height="50dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/chewy"
            android:text="@string/textViewTotal"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/recyclerViewItems"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAdicionar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewItems"
            android:layout_width="410dp"
            android:layout_height="485dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>