<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ListaProdutos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewSize">

        <TextView
            android:id="@+id/textView"
            android:layout_width="305dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/chewy"
            android:text="@string/textView"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/editTextItem"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/chewy"
            android:hint="@string/editText"
            android:imeOptions="actionDone"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.490"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/chewy"
            android:text="@string/buttonAdd"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="410dp"
            android:layout_height="385dp"
            android:layout_marginBottom="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>